# golem-ai

./: Cargo.toml  INPUT.md  INPUT_ESCAPED.md  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
common-rust/common-lib/: Cargo.toml
common-rust/common-lib/src/: lib.rs
components-rust/golem-ai-entry-categorizer/: golem.yaml
components-rust/golem-ai-input-analyzer/: golem.yaml
components-rust/golem-ai-input-analyzer/src/: lib.rs
golem_ai_backend/: api-definition.yaml  deploy.sh
golem_ai_backend/common-rust/common-lib/: Cargo.toml
golem_ai_backend/common-rust/common-lib/src/: lib.rs
golem_ai_backend/components-rust/golem-ai-entry-categorizer/: Cargo.toml  golem.yaml
golem_ai_backend/components-rust/golem-ai-entry-categorizer/src/: lib.rs
golem_ai_backend/components-rust/golem-ai-entry-categorizer/wit/: golem-ai-entry-categorizer.wit
golem_ai_backend/components-rust/golem-ai-input-analyzer/: Cargo.toml  golem.yaml
golem_ai_backend/components-rust/golem-ai-input-analyzer/src/: lib.rs
golem_ai_backend/components-rust/golem-ai-input-analyzer/wit/: golem-ai-input-analyzer.wit
golem_ai_backend/components-rust/golem-ai-worker/: Cargo.toml  golem.yaml
golem_ai_backend/components-rust/golem-ai-worker/src/: lib.rs
golem_ai_backend/components-rust/golem-ai-worker/wit/: golem-ai-worker.wit
